<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@color/bg"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp">

        <TextView
            android:id="@+id/tvFormato"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            app:layout_constraintHorizontal_chainStyle="packed"
            android:text="Formato"
            android:textSize="20sp"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/spFormato"
            />

        <Spinner
            android:id="@+id/spFormato"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:textSize="20sp"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/tvFormato"
            app:layout_constraintEnd_toEndOf="parent"
            />


        <TextView
            android:id="@+id/tvAncho"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            app:layout_constraintHorizontal_chainStyle="spread"

            android:textSize="20sp"
            android:layout_marginTop="20dp"

            app:layout_constraintTop_toBottomOf="@id/spFormato"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/tvAlto"

            android:text="@string/tabla_ancho"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/tvAlto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:textSize="20sp"
            android:layout_marginTop="20dp"

            app:layout_constraintTop_toBottomOf="@id/spFormato"
            app:layout_constraintStart_toEndOf="@id/tvAncho"
            app:layout_constraintEnd_toEndOf="parent"

            android:text="@string/tabla_alto"
            android:textStyle="bold"
            />

        <EditText
            android:id="@+id/etAncho"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:inputType="numberDecimal"

            app:layout_constraintTop_toBottomOf="@id/tvAncho"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/tvAlto"
            />

        <EditText
            android:id="@+id/etAlto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:inputType="numberDecimal"

            app:layout_constraintTop_toBottomOf="@id/tvAlto"
            app:layout_constraintStart_toEndOf="@id/tvAncho"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <Button
            android:id="@+id/btnCalcular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginTop="20dp"

            android:text="@string/btn_calcular"
            android:textColor="@color/white"

            app:layout_constraintTop_toBottomOf="@id/etAncho"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btnLimpiar"/>

        <Button
            android:id="@+id/btnLimpiar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginTop="20dp"

            android:text="@string/btn_limpiar"
            android:textColor="@color/white"

            app:layout_constraintTop_toBottomOf="@id/etAncho"
            app:layout_constraintStart_toEndOf="@id/btnCalcular"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TableLayout
        android:id="@+id/tlResultados"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:visibility="visible">

        <TableRow
            android:layout_marginBottom="10dp">

            <TextView
                android:layout_column="0"
                android:layout_weight="2"
                />

            <TextView
                android:layout_column="1"
                android:layout_weight="1"
                android:text="@string/tabla_ancho"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textAlignment="center"
                />

            <TextView
                android:layout_column="2"
                android:layout_weight="1"
                android:text="@string/tabla_alto"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textAlignment="center"
                />

        </TableRow>

        <TableRow
            android:id="@+id/filaXXX"
            android:layout_marginBottom="10dp">

            <TextView
                android:layout_column="0"
                android:layout_weight="2"
                android:text="@string/tabla_pantalla_XXX"
                android:textSize="20sp"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/xxxAncho"
                android:textSize="20sp"
                android:layout_column="1"
                android:layout_weight="1"
                android:textAlignment="center"
                />

            <TextView
                android:id="@+id/xxxAlto"
                android:textSize="20sp"
                android:layout_column="2"
                android:layout_weight="1"
                android:textAlignment="center"
                />

        </TableRow>

        <TableRow
            android:id="@+id/filaXX"
            android:layout_marginBottom="10dp">

            <TextView
                android:layout_column="0"
                android:layout_weight="2"
                android:text="@string/tabla_pantalla_XX"
                android:textSize="20sp"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/xxAncho"
                android:textSize="20sp"
                android:layout_column="1"
                android:layout_weight="1"
                android:textAlignment="center"
                />

            <TextView
                android:id="@+id/xxAlto"
                android:textSize="20sp"
                android:layout_column="2"
                android:layout_weight="1"
                android:textAlignment="center"
                />

        </TableRow>

        <TableRow
            android:id="@+id/filaX"
            android:layout_marginBottom="10dp">

            <TextView
                android:layout_column="0"
                android:layout_weight="2"
                android:text="@string/tabla_pantalla_X"
                android:textSize="20sp"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/xAncho"
                android:textSize="20sp"
                android:layout_column="1"
                android:layout_weight="1"
                android:textAlignment="center"
                />

            <TextView
                android:id="@+id/xAlto"
                android:textSize="20sp"
                android:layout_column="2"
                android:layout_weight="1"
                android:textAlignment="center"
                />

        </TableRow>

        <TableRow
            android:id="@+id/filaH"
            android:layout_marginBottom="10dp">

            <TextView
                android:layout_column="0"
                android:layout_weight="2"
                android:text="@string/tabla_pantalla_H"
                android:textSize="20sp"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/hAncho"
                android:textSize="20sp"
                android:layout_column="1"
                android:layout_weight="1"
                android:textAlignment="center"
                />

            <TextView
                android:id="@+id/hAlto"
                android:textSize="20sp"
                android:layout_column="2"
                android:layout_weight="1"
                android:textAlignment="center"
                />

        </TableRow>

        <TableRow
            android:id="@+id/filaM"
            android:layout_marginBottom="10dp">

            <TextView
                android:layout_column="0"
                android:layout_weight="2"
                android:text="@string/tabla_pantalla_M"
                android:textSize="20sp"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/mAncho"
                android:textSize="20sp"
                android:layout_column="1"
                android:layout_weight="1"
                android:textAlignment="center"
                />

            <TextView
                android:id="@+id/mAlto"
                android:textSize="20sp"
                android:layout_column="2"
                android:layout_weight="1"
                android:textAlignment="center"
                />

        </TableRow>

    </TableLayout>



</LinearLayout>